--- a/manifest.json
+++ b/manifest.json
@@ -1,36 +1,30 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "BetterAIS",
     "version": "0.0.2",
     "description": "Changes styles in AIS",
     "icons": {
-        "15": "icons/icon.png",
-        "32": "icons/icon.png",
-        "64": "icons/icon.png",
-        "48": "icons/icon.png",
-        "128": "icons/icon.png"
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     },
-
-    "browser_action": {
+    "action": {
         "default_popup": "html/popup.html",
         "default_icon": "icons/icon.png"
     },
-
-    
     "web_accessible_resources": [
-        "css/nord.css",
-        "css/neon.css",
-        "css/dark.css",
-        "css/incognito.css",
-        "css/bootstrap.min.css",
-        "js/jquery-1.10.2.min.js",
-        "js/bootstrap.bundle.min.js",
-        "js/script.js",
-        
-        "icons/dekorace_crit.png"
+        {
+            "resources": [
+              "min/nord.min.css",
+              "min/neon.min.css",
+              "min/dark.min.css",
+              "min/incognito.min.css",
+              "icons/*"
+            ],
+            "matches": ["https://is.stuba.sk/*"]
+        }
     ],
-    
-
     "content_scripts": [
         {
             "matches": ["https://is.stuba.sk/*"],
@@ -41,27 +35,18 @@
             "matches": ["https://is.stuba.sk/*"],
             "js": ["js/script.js"],
             "run_at": "document_end"
-        },
-        {
-            "matches": ["https://is.stuba.sk/*"],
-            "js":["js/jquery-1.11.0.min.js"],
-            "run_at": "document_end"
         }
     ],
-    
-    
     "background": {
-		"scripts": ["js/background.js"],
-		"persistent": false
-	},
-
+        "service_worker": "js/background.js"
+    },
     "options_page": "html/options.html",
-
     "permissions": [
         "storage",
-        "unlimitedStorage",
         "tabs",
-        "storage",
-		"activeTab"
+        "activeTab"
+    ],
+    "host_permissions": [
+        "https://is.stuba.sk/*"
     ]
 }
